# smart-http-requester

./: .coverage  .gitignore  Dockerfile  PROMETHEUS_METRICS.md  README.md  WS_SETUP.md  application.py  config.py  description.md  docker-compose-metrics.yml  docker-compose.full.yml  docker-compose.yml  prometheus.yml  pyproject.toml  start-metrics.sh  test-metrics.sh  test_db_update.py  test_ws.py
.github/workflows/: ci.yml
api/v1/: __init__.py  auth.py  metrics.py  requests.py
core/: __init__.py  auth.py
docker/: generate-certs.sh
docker/api/: Dockerfile
docker/grafana/provisioning/dashboards/: api-monitoring.json  dashboard.yml
docker/rabbitmq/: rabbitmq.conf
docs/adr/: 001-use-rabbitmq-for-async-processing.de.md  001-use-rabbitmq-for-async-processing.en.md  002-separate-api-and-workers.de.md  002-separate-api-and-workers.en.md  003-multi-language-worker-implementations.de.md  003-multi-language-worker-implementations.de.md.md  003-multi-language-worker-implementations.en.md  003-multi-language-worker-implementations.en.md.md  004-redis-distributed-rate-limiting.de.md  004-redis-distributed-rate-limiting.en.md  005-dlx-exponential-retries.de.md  005-dlx-exponential-retries.en.md  006-observability.de.md  006-observability.en.md
domain/: auth.py  tasks.py
middleware/: auth.py  metrics.py  rate_limit.py
middlewares/: rate_limit.py
migrations/: 0001_initialization.sql  0002_token_and_roles.sql  0003_task_notify_trigger.sql  0004_not_null_for_task_fields.sql
repository/: __init__.py  auth.py  task.py
schemas/: __init__.py  auth.py  task.py
services/: database.py  logger.py  metrics.py  pg_poller.py  rabbitmq.py  redis.py  redis_service.py
tests/: __init__.py  conftest.py  test_auth.py  test_logger.py  test_metrics.py  test_requests.py
