[project]
name = "smart-http-requester"
version = "0.1.0"
description = "Http requester system head. Pet project."
requires-python = ">=3.14"
dependencies = [
    "aio-pika>=9.6.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.136.0",
    "granian>=2.7.3",
    "loguru>=0.7.3",
    "prometheus-client>=0.19.0",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.45.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pytest-cov>=7.1.0",
]
